--- a/index.html
+++ b/index.html
@@ -3,100 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Crypto News</title>
+  <title>Crypto Hub — Главная</title>
   <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f5f5f5;
-      color: #333;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background: #4a00e0; 
-      background: linear-gradient(90deg, #8e2de2, #4a00e0);
-      color: #fff;
-      padding: 1rem;
-      text-align: center;
-    }
-    main {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-    }
-    .news-card {
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      margin-bottom: 1rem;
-      padding: 1rem;
-      transition: transform 0.2s;
-    }
-    .news-card:hover {
-      transform: scale(1.02);
-    }
-    .news-card h3 {
-      margin: 0 0 0.5rem 0;
-    }
-    .news-card p {
-      margin: 0.5rem 0;
-    }
-    .news-card a {
-      text-decoration: none;
-      color: #4a00e0;
-      font-weight: bold;
-    }
-    footer {
-      text-align: center;
-      padding: 1rem;
-      color: #777;
-    }
-    @media (max-width: 600px) {
-      main { margin: 1rem; }
-    }
+    body { font-family: Arial, sans-serif; background:#f5f5f5; margin:0; }
+    header { background: linear-gradient(90deg,#8e2de2,#4a00e0); color:white; text-align:center; padding:1rem; }
+    nav { background:#eee; padding:1rem; text-align:center; }
+    nav a { margin:0 1rem; text-decoration:none; font-weight:bold; color:#4a00e0; }
+    main { max-width:900px; margin:2rem auto; padding:0 1rem; }
+    .card { background:white; border-radius:8px; box-shadow:0 2px 5px rgba(0,0,0,0.1); padding:1rem; margin-bottom:1rem; }
   </style>
 </head>
 <body>
   <header>
-    <h1>Новости криптовалют</h1>
+    <h1>Crypto Hub</h1>
+    <p>Курсы криптовалют</p>
   </header>
-  <main id="news-container">
-    <p>Загрузка новостей...</p>
+
+  <nav>
+    <a href="index.html">Главная</a>
+    <a href="news.html">Новости</a>
+  </nav>
+
+  <main id="coins-container">
+    <p>Загрузка данных...</p>
   </main>
-  <footer>
-    &copy; 2025 Crypto News
-  </footer>
+
+  <footer style="text-align:center;padding:1rem;color:#777;">© 2025 Crypto Hub</footer>
 
   <script>
-    // Пример: бесплатный API CoinGecko для новостей
-    async function fetchCryptoNews() {
-      const container = document.getElementById('news-container');
-      container.innerHTML = '<p>Загрузка новостей...</p>';
-
+    async function loadCoins(){
+      const container = document.getElementById("coins-container");
       try {
-        // Бесплатный пример с CoinGecko (курсы)
-        const response = await fetch('https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&order=market_cap_desc&per_page=10&page=1&sparkline=false');
-        const data = await response.json();
-
-        container.innerHTML = '';
-        data.forEach(coin => {
-          const card = document.createElement('div');
-          card.className = 'news-card';
-          card.innerHTML = `
-            <h3>${coin.name} (${coin.symbol.toUpperCase()})</h3>
-            <p>Текущая цена: $${coin.current_price}</p>
-            <p>Изменение за 24ч: ${coin.price_change_percentage_24h.toFixed(2)}%</p>
-            <a href="https://www.coingecko.com/ru/coins/${coin.id}" target="_blank">Подробнее</a>
-          `;
-          container.appendChild(card);
+        const res = await fetch("https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&per_page=10");
+        const data = await res.json();
+        container.innerHTML = "";
+        data.forEach(c=>{
+          const div=document.createElement("div");
+          div.className="card";
+          div.innerHTML=`<h3>${c.name} (${c.symbol.toUpperCase()})</h3>
+            <p>Цена: $${c.current_price}</p>
+            <p>24ч: ${c.price_change_percentage_24h.toFixed(2)}%</p>
+            <a href="https://www.coingecko.com/ru/coins/${c.id}" target="_blank">Подробнее</a>`;
+          container.appendChild(div);
         });
-      } catch (err) {
-        container.innerHTML = '<p>Не удалось загрузить новости.</p>';
-        console.error(err);
+      } catch(e){
+        container.innerHTML="<p>Ошибка загрузки данных.</p>";
       }
     }
-
-    fetchCryptoNews();
+    loadCoins();
   </script>
 </body>
 </html>
